--- a/products.html
+++ b/products.html
@@ -194,29 +194,40 @@ header {
 
 <div id="toast">تمت الإضافة إلى السلة</div>
 
-<script>
+<script defer>
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
 
+// دالة لعرض المنتجات
+function renderProducts(data){
+    let html = "";
+    for(let i=0;i<data.length;i++){
+        const item = data[i];
+        html += `
+            <div class="product">
+                <div class="name">${item.name}</div>
+                <div class="price">السعر: ${item.price} جنيه</div>
+                <input type="number" min="1" value="1" data-index="${i}">
+                <button onclick="addToCart(${i})">أضف إلى السلة</button>
+            </div>
+        `;
+    }
+    container.innerHTML = html;
+}
+
+// تحميل المنتجات من localStorage أو السيرفر
+if(localStorage.getItem("products")){
+   productsData = JSON.parse(localStorage.getItem("products"));
+   renderProducts(productsData);
+}
 fetch(SCRIPT_PRODUCTS_URL)
 .then(res => res.json())
 .then(data => {
     productsData = data;
-    container.innerHTML = "";
-    for(let i=0;i<productsData.length;i++){
-        const item = productsData[i];
-        const div = document.createElement("div");
-        div.className = "product";
-        div.innerHTML = `
-            <div class="name">${item.name}</div>
-            <div class="price">السعر: ${item.price} جنيه</div>
-            <input type="number" min="1" value="1" data-index="${i}">
-            <button onclick="addToCart(${i})">أضف إلى السلة</button>
-        `;
-        container.appendChild(div);
-    }
+    localStorage.setItem("products", JSON.stringify(data));
+    renderProducts(data);
 })
 .catch(err=>console.log("❌ خطأ في جلب المنتجات:",err));
 
@@ -227,7 +238,6 @@ function showToast(msg){
   setTimeout(()=>toast.style.display="none",1500);
 }
 
-// تحديث عداد السلة
 function updateCartCount(){
   const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
   const badge = document.getElementById("cart-count");
