--- a/products.html
+++ b/products.html
@@ -154,6 +154,20 @@ header {
 .cart-item span { margin: 0 5px; }
 .cart-item button { padding: 2px 8px; font-size: 14px; }
 
+/* الأرقام تحت بعض */
+#orderNumbers a {
+  display: block;
+  margin: 5px 0;
+  font-size: 16px;
+  color: #8a2be2;
+  font-weight: bold;
+  text-decoration: none;
+}
+#orderNumbers a:hover {
+  color: #6a1fbf;
+  text-decoration: underline;
+}
+
 #toast {
   position: fixed;
   bottom: 20px; right: 20px;
