--- a/index.html
+++ b/index.html
@@ -19,50 +19,30 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 .top-buttons button { padding:12px 18px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; transition:0.3s; }
 .top-buttons button:hover { background:#6a1fbf; transform:scale(1.05); }
 
-.telegram-fixed-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 12px 18px;
-    border-radius: 50px;
-    background: #00bfff;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-    z-index: 1002;
-    transition: 0.3s;
-}
-.telegram-fixed-btn:hover {
-    background: #009acd;
-    transform: scale(1.05);
-}
+.password-box { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#00bfff; padding:25px; border-radius:50px; max-width:400px; width:90%; box-shadow:0 2px 15px rgba(0,0,0,0.3); text-align:center; z-index:1001; font-weight:bold; color:#fff; }
+.password-box input { width:70%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc; }
+.password-box button { padding:10px 15px; margin:5px; border:none; border-radius:8px; background:#fff; color:#00bfff; cursor:pointer; font-weight:bold; }
 
 .info-box { display:none; background:#fff; margin:15px auto; padding:20px; border-radius:12px; max-width:400px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.2); }
+
+.support-btn { position:fixed; top:10px; left:10px; padding:10px 15px; border-radius:50%; background:#ff5722; color:#fff; font-weight:bold; cursor:pointer; box-shadow:0 2px 5px rgba(0,0,0,0.3); transition:0.3s; }
+.support-btn:hover { background:#e64a19; transform:scale(1.1); }
+
+.modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
+.modal-content { background:#fff; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
+.modal-content h2 { color:#8a2be2; margin-bottom:15px; }
 
 .form-container { max-width:400px; margin:20px auto; background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
 .form-container h3 { text-align:center; color:#8a2be2; margin-bottom:15px; }
 .form-container input, .form-container select { width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em; }
 .form-container button { width:100%; padding:12px; border:none; border-radius:10px; font-size:1.1em; font-weight:bold; cursor:pointer; color:#fff; background:#8a2be2; transition:0.3s; }
 .form-container button:hover { background:#6a1fbf; transform:scale(1.02); }
-
-.modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
-.modal-content { background:#fff; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
-.modal-content h2 { color:#8a2be2; margin-bottom:15px; }
-
-.password-box { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#00bfff; padding:25px; border-radius:50px; max-width:400px; width:90%; box-shadow:0 2px 15px rgba(0,0,0,0.3); text-align:center; z-index:1001; font-weight:bold; color:#fff; }
-.password-box input { width:70%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc; }
-.password-box button { padding:10px 15px; margin:5px; border:none; border-radius:8px; background:#fff; color:#00bfff; cursor:pointer; font-weight:bold; }
-
-.support-btn { position:fixed; top:10px; left:10px; padding:10px 15px; border-radius:50%; background:#ff5722; color:#fff; font-weight:bold; cursor:pointer; box-shadow:0 2px 5px rgba(0,0,0,0.3); transition:0.3s; }
-.support-btn:hover { background:#e64a19; transform:scale(1.1); }
 </style>
 </head>
 <body>
 
 <div class="top-bar">🌹 اللهم صلِّ وسلم وبارك على سيدنا محمد ﷺ 🌹</div>
 <div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات✨</div>
-<div class="blink">✨ هنبيع ببلاش واكن الصنف مجاش ✨</div> 
 
 <header>
 <h1>شركة جنة</h1>
@@ -76,17 +56,17 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 </div>
 
 <div class="top-buttons">
-<button onclick="showInfo('العنوان:<br>المنصورة - نبروه سوق المحمول')">🏠 العنوان</button>
-<button onclick="showInfo('تواصل معنا:<br>01067070423<br>01022495795<br>01012253500')">📞 تواصل معنا</button>
+<button id="btnAddress">🏠 العنوان</button>
+<button id="btnContact">📞 تواصل معنا</button>
 <button onclick="window.open('https://www.facebook.com/share/174s1yLKfA/?mibextid=wwXIfr','_blank')">📘 فيسبوك</button>
-<button class="telegram-style-btn" onclick="showPasswordBox()">🔥 المنتجات والعروض</button>
-<button class="telegram-style-btn" onclick="showTelegramBox()">📲 تليجرام التفعيلات</button>
+<button id="btnProducts">🔥 المنتجات والعروض</button>
+<button id="btnTelegram">📲 تليجرام التفعيلات</button>
 </div>
 
 <div id="infoBox" class="info-box">
 <h2>تفاصيل</h2>
 <p id="infoText" style="line-height:1.6;"></p>
-<button onclick="closeInfo()">رجوع</button>
+<button id="closeInfo">رجوع</button>
 </div>
 
 <div class="form-container">
@@ -105,7 +85,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <div id="successModal" class="modal">
 <div class="modal-content">
 <h2>🎉 تم التسجيل بنجاح نورت المملكة😍 🎉</h2>
-<button onclick="closeModal()">إغلاق</button>
+<button id="closeModal">إغلاق</button>
 </div>
 </div>
 
@@ -113,33 +93,75 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <h2>ادخل كلمه السر لمشاهده الاسعار والمنتجات 🔑</h2>
 <input type="password" id="offerPass" placeholder="كلمة السر">
 <div style="margin:10px 0;">إذا أردت كلمة السر الخاصه بك، تواصل مع المندوب الخاص بك</div>
-<button onclick="checkPassword()">دخول</button>
-<button onclick="closePasswordBox()">رجوع</button>
+<button id="checkPasswordBtn">دخول</button>
+<button id="closePasswordBoxBtn">رجوع</button>
 </div>
 
 <div id="telegramBox" class="password-box">
 <h2>ادخل تليجرام التفعيلات 🔑</h2>
 <input type="text" id="telegramPass" placeholder="فارغ حالياً">
 <div style="margin:10px 0;">سيتم وضع الرابط لاحقاً</div>
-<button onclick="checkTelegram()">دخول</button>
-<button onclick="closeTelegramBox()">رجوع</button>
+<button id="checkTelegramBtn">دخول</button>
+<button id="closeTelegramBoxBtn">رجوع</button>
 </div>
 
-<button class="support-btn" onclick="window.open('https://wa.me/201022495795','_blank')">الدعم الفني</button>
+<button class="support-btn" id="supportBtn">الدعم الفني</button>
 
 <script>
+// دوال الزرار
 const infoBox = document.getElementById('infoBox');
 const infoText = document.getElementById('infoText');
 const passwordBox = document.getElementById('passwordBox');
-const submitBtn = document.getElementById("submitBtn");
-const successModal = document.getElementById("successModal");
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw_Yc2ii6bu0iLOJEt0iXwnNjzZFLo0djFODlZIDORzWrVopf653DuJmvywGIbZa3PYJA/exec";
+const telegramBox = document.getElementById('telegramBox');
+const successModal = document.getElementById('successModal');
 
-// دوال المعلومات
-function showInfo(text){ infoText.innerHTML = text; infoBox.style.display = 'block'; }
-function closeInfo(){ infoBox.style.display = 'none'; }
-function showPasswordBox(){ passwordBox.style.display='block'; }
-function closePasswordBox(){ passwordBox.style.display='none'; }
-function showTelegramBox(){ document.getElementById('telegramBox').style.display='block'; }
-function closeTelegramBox(){ document.getElementById('telegramBox').style.display='none'; }
-function checkTelegram(){ alert("سي
+// عنوان
+document.getElementById('btnAddress').onclick = ()=> { infoText.innerHTML='العنوان:<br>المنصورة - نبروه سوق المحمول'; infoBox.style.display='block'; }
+// تواصل
+document.getElementById('btnContact').onclick = ()=> { infoText.innerHTML='تواصل معنا:<br>01067070423<br>01022495795<br>01012253500'; infoBox.style.display='block'; }
+// اغلاق المعلومات
+document.getElementById('closeInfo').onclick = ()=> { infoBox.style.display='none'; }
+
+// المنتجات مع كلمة السر
+document.getElementById('btnProducts').onclick = ()=> { passwordBox.style.display='block'; }
+document.getElementById('closePasswordBoxBtn').onclick = ()=> { passwordBox.style.display='none'; }
+document.getElementById('checkPasswordBtn').onclick = ()=>{
+    const pass = document.getElementById('offerPass').value;
+    if(pass === "010024"){
+        // تشغيل الصوت
+        let audio = new Audio("yalla_bina.mp3"); // ضع ملف الصوت بنفس مجلد الصفحة
+        audio.play();
+        window.open('products.html', '_blank');
+    } else { alert("❌ كلمة السر غير صحيحة"); }
+}
+
+// تليجرام
+document.getElementById('btnTelegram').onclick = ()=> { telegramBox.style.display='block'; }
+document.getElementById('closeTelegramBoxBtn').onclick = ()=> { telegramBox.style.display='none'; }
+document.getElementById('checkTelegramBtn').onclick = ()=> { alert("سيتم وضع الرابط لاحقاً"); }
+
+// الدعم الفني
+document.getElementById('supportBtn').onclick = ()=> { window.open('https://wa.me/201022495795','_blank'); }
+
+// تسجيل بيانات المستخدم
+const submitBtn = document.getElementById("submitBtn");
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw_Yc2ii6bu0iLOJEt0iXwnNjzZFLo0djFODlZIDORzWrVopf653DuJmvywGIbZa3PYJA/exec";
+submitBtn.onclick = (e)=>{
+    e.preventDefault();
+    const nameVal = document.getElementById("name").value.trim();
+    const phoneVal = document.getElementById("phone").value.trim();
+    const addressVal = document.getElementById("address").value.trim();
+    const fieldVal = document.getElementById("field").value;
+    if(!nameVal || !phoneVal || !addressVal || !fieldVal){ alert("اكمل البيانات"); return; }
+    successModal.style.display='flex';
+    document.getElementById("name").value=''; document.getElementById("phone").value='';
+    document.getElementById("address").value=''; document.getElementById("field").value='';
+    const data = { name:nameVal, phone:phoneVal, address:addressVal, field:fieldVal };
+    const params = new URLSearchParams();
+    for(let key in data) params.append(key,data[key]);
+    fetch(SCRIPT_URL,{method:'POST',body:params}).catch(err=>console.log(err));
+}
+document.getElementById('closeModal').onclick = ()=> { successModal.style.display='none'; }
+</script>
+</body>
+</html>
